Arrays.asList() method changed to List.of()